@@ -115,6 +115,7 @@ const char * fallback_ui_file =
 "        <separator />\n"
 "        <menuitem action='read-selected-article' />\n"
 "        <menuitem action='download-selected-article' />\n"
+"        <menuitem action='show-selected-article-info' />\n"
 "        <separator />\n"
 "        <menuitem action='mark-article-read' />\n"
 "        <menuitem action='mark-article-unread' />\n"
@@ -175,6 +176,7 @@ const char * fallback_ui_file =
 "    <separator />\n"
 "    <menuitem action='read-selected-article' />\n"
 "    <menuitem action='download-selected-article' />\n"
+"    <menuitem action='show-selected-article-info' />\n"
 "    <separator />\n"
 "    <menuitem action='mark-article-read' />\n"
 "    <menuitem action='mark-article-unread' />\n"
