@@ -26,6 +26,8 @@
  397347 posting error message could be more helpful
  397348 new feature: preferences option to clear the article cache on exit
  389887 the nntp 411 error message could be more helpful
+ 350372 list missing parts of an incomplete multipart
+
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
